--- a/.github/workflows/daily-run.yml
+++ b/.github/workflows/daily-run.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt  # if needed
+          #pip install -r requirements.txt  # if needed
 
       - name: Run script
         run: |
